# ultimate-tic-tac-toe

./: .gitignore  Cargo.toml  requirements.txt  temp  train.py
.zed/: settings.json
config/: config.json
databin/: .gitignore
src/: constants.rs  core.rs  game.rs  lib.rs  main.rs  movegen.rs  network.rs  search.rs  train.rs
tests/: accumulators.rs
train/: train.py
