[package]
name = "ultimate-tic-tac-toe"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bincode = { version = "2.0.1", features = ["serde"] }
bytemuck = { version = "1.25.0", features = ["derive", "min_const_generics"] }
colored = "3.1.1"
once_cell = "1.21.4"
rand = "0.10.0"
rayon = "1.11.0"

[[bin]]
name = "gendatabin"
path = "bin/gendatabin.rs"

[[bin]]
name = "selfplay"
path = "bin/selfplay.rs"

[[bin]]
name = "battle"
path = "bin/battle.rs"
