[package]
name = "ultimate-tic-tac-toe"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bincode = { version = "2.0.1", features = ["serde"] }
burn = "0.20.1"
bytemuck = { version = "1.25.0", features = ["derive", "min_const_generics"] }
colored = "3.1.1"
once_cell = "1.21.4"
rand = "0.10.0"
rayon = "1.11.0"
serde = "1.0.228"
serde_json = "1.0.149"
test-case = "3.3.1"

[profile.release]
debug = true        # keep symbols in release build

[[bin]]
name = "gendatabin"
path = "bin/gendatabin.rs"

[[bin]]
name = "selfplay"
path = "bin/selfplay.rs"

[[bin]]
name = "battle"
path = "bin/battle.rs"

[[bin]]
name = "main"
path = "bin/main.rs"

[[bin]]
name = "training_loop"
path = "bin/training_loop.rs"

[[bin]]
name = "enginevsplayer"
path = "bin/enginevsplayer.rs"

[[bin]]
name = "enginevsengine"
path = "bin/enginevsengine.rs"

[[bin]]
name = "eval_all"
path = "bin/eval_all.rs"
